# air-langchain-trust

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
air_langchain_trust/: __init__.py  audit_ledger.py  config.py  consent_gate.py  data_vault.py  errors.py  gate_client.py  handler.py  injection_detector.py
docs/: integration-guide.md
examples/: quickstart_with_gate.py
tests/: conftest.py  test_audit_ledger.py  test_consent_gate.py  test_data_vault.py  test_handler.py  test_injection_detector.py
