[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-langchain-trust"
version = "0.1.0"
description = "AIR Trust Layer plugin for LangChain — audit, PII vault, consent gate, and injection detection via callbacks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jason Shotwell", email = "jason.j.shotwell@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/airblackbox/air-langchain-trust"
Repository = "https://github.com/airblackbox/air-langchain-trust"
Issues = "https://github.com/airblackbox/air-langchain-trust/issues"

[tool.setuptools.packages.find]
include = ["air_langchain_trust*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
